istio/dev-peerauth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: dev-mtls
  namespace: dev
spec:
  mtls:
    mode: STRICT
