istio/discovery-server-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: discovery-server-dr
  namespace: dev
spec:
  host: discovery-server.dev.svc.cluster.local
  trafficPolicy:
    connectionPool:
      http:
        h2UpgradePolicy: DO_NOT_UPGRADE
    tls:
      mode: ISTIO_MUTUAL
